<resources>
    <string name="app_name">Movie Application</string>
    <string name="powered_by">Powered by Movie</string>
    <string name="todo">todo1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search Here</string>

    <string name="app_version" translatable="false">0.17.3</string>
    <string name="database_version_label" translatable="false">Database version: </string>

    <string name="revision_history_label" translatable="false">Revision History: </string>
    <string name="thanks_label" translatable="false">Libraries used in this app: </string>
    <string name="MPAndroidChart_content" translatable="false">MPAndroidChart (Apache 2.0)</string>
    <string name="javaCSV_content" translatable="false">JavaCSV (LGPL)</string>
    <string name="antoniomChronometer_content" translatable="false">Millisecond-Chronometer (Apache 2.0)</string>
    <string name="PagerSlidingTabStrip_content" translatable="false">PagerSlidingTabStrip (Apache 2.0)</string>
    <string name="LicensesDialog_content" translatable="false">LicensesDialog (Apache 2.0)</string>
    <string name="SmartTabLayout_content" translatable="false">SmartTabLayout (Apache 2.0)</string>
    <string name="freepik_content" translatable="false">Freepik (Free License with attribution)</string>
    <string name="flaticon_content" translatable="false">Flaticon (Free License with attribution)</string>
    <string name="circleprogress_content" translatable="false">CircleProgress (WTFPL License)</string>
    <string name="circularImageView_content" translatable="false">CircularImageView (Apache 2.0)</string>
    <string name="ktoast_content" translatable="false">KToast (Apache 2.0)</string>
    <string name="SweetAlertDialog_content" translatable="false">SweetAlertDialog (MIT)</string>
    <string name="AndroidImageCropper_content" translatable="false">Android-Image-Cropper (Apache 2.0)</string>
    <string name="MaterialFavoriteButton_content" translatable="false">Material Favorite Button (Apache 2.0)</string>


</resources>