<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="20dp"
    tools:context=".Fragments.RetailerAboutFragment">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout

       android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EEEEEE"
    android:orientation="vertical"
    android:paddingLeft="0dp"
    android:paddingTop="10dp"
    android:paddingRight="0dp"
    android:paddingBottom="0dp">
    <androidx.cardview.widget.CardView
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- App Name -->
            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:textColor="@color/white"
                    android:text="@string/app_name" />

                <TextView
                    android:id="@+id/app_version_textview"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="" />

            </LinearLayout>

            <!-- Database Version -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:textColor="@color/white"
                    android:text="@string/database_version_label" />

                <TextView
                    android:id="@+id/database_version"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:textColor="@color/white"

                    android:text="1" />

            </LinearLayout>

            <!-- Author Name -->




        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <!-- Revision Name -->


    <androidx.cardview.widget.CardView
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:gravity="center"
        android:text="@string/thanks_label" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

               <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/javaCSV"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/javaCSV_content" />

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/LicensesDialog"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/LicensesDialog_content" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/PagerSlidingTabStrip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="SQLITE DATABASE" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/SmartTabLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="Animations Sliding" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/flaticonCredits"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="Chip Navigation Bar" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/freepikCredits"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/freepik_content" />

        </androidx.cardview.widget.CardView>





        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ktoast"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/ktoast_content" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/SweetAlertDialog"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/SweetAlertDialog_content" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="Fragments" />

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="Min Android version must be 23" />

        </androidx.cardview.widget.CardView>



    </LinearLayout>

</LinearLayout>
</ScrollView>

</FrameLayout>